o parte din checkstyle done